--- a/style.css
+++ b/style.css
@@ -2,13 +2,26 @@ svg {
 	float: left;
 	max-width: 100%;
 	max-height: 70vh;
+	font-style: italic;
 }
 
+
+body {
+	font-family: Gravur;
+}
 
 svg path, svg polyline, svg line {
 fill:rgba(0,0,0,0.2);
 stroke:rgba(0,0,0,0.6);
 stroke-width: 0.4px;
+}
+
+@media (min-width: 768px) {
+	.configs {
+		position: fixed;
+		height: 100%;
+		overflow-y: scroll;
+	}
 }
 
 @media (max-width: 768px) {
@@ -17,3 +30,9 @@ stroke-width: 0.4px;
 		background: rgba(255,255,255,0.8)
 	}
 }
+
+@font-face {
+	font-family: Gravur;
+	src: url(gravuconlig.woff2);
+}
+
